# Simes-Master

./: CMakeLists.txt  JSON_test.c  Master.c  README.md  build.sh  clean.sh  test.txt
Common/Configuration/: Configuration.c  Configuration.h
Common/Curl/: PostData.c  PostData.h
Common/DataTypes/: DataTypes.c  DataTypes.h
Modbus/Decoder/: Decoder.c  Decoder.h
Modbus/ModbusMaster/: Modbus.c  Modbus.h  ModbusMaster.c
Mqtt/: Mqtt.c  Mqtt.h  MqttDefinitions.c  MqttDefinitions.h  MqttMaster.c  MqttMaster.h
Mqtt/MqttDefinitions/: DataTypes.c  DataTypes.h  MqttDefinitions.c  MqttDefinitions.h
Mqtt/MqttMaster/: MqttMaster.c  MqttMaster.h
config/: SimesMaterConfig.csv  mosquitto.conf
inc/: Decoder.h  Modbus.h  ModbusMaster.h  PostData.h
src/: Decoder.c  Modbus.c  ModbusMaster.c  PostData.c
